--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
 
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/adinkwok/eEMDR" class="icon fa-github"><span class="label">Github</span></a></li>
 
 					</ul>
 
