--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a class="image"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
 							<h3>EMDR is not hypnosis.</h3>
 							<p>EMDR takes part of the subject back to revisit a traumatic past event in order to "reprocess" the experience and their emotions while keeping another part of the subject in the present through lateral eye movements.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<a class="image"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Proven to help.</h3>
 							<p>EMDR has been backed by more than 20 controlled studies as well as by the American Psychiatric Association, International Society for Traumatic Stress, the U.S.Department of Veterans Affairs,the Department of Defense, the UK Department of Health and the Israeli National Council for Mental Health. </p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
+						<a class="image"><img src="images/insession.png" /></a>
 						<div class="content">
 							<h3>How Does it work?</h3>
 							<p>After a traumatic experience, the moment of the event gets "stuck in time." Revisiting the event can sometimes be just as painful as the event itself. EDMR sessions last 60-90 minutes and seem to have a direct effect on the way the brain processes information, behaving simularily to natural processes such as dreaming and REM eye movement.</p>
