--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<div id="header">
-				<img src="ibtToKo.png" alt="vrEMDR logo">
+				<img src="website logo.png" alt="vrEMDR logo">
 			<h1>Hi. This is vrEMDR.</h1>
 				<p>An app that bridges the gap between technology and medicine
 				<br />
