Push last media to site

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a class="image"><img src="images/pic01.jpg" alt="" /></a>
+						<a class="image"><img src="images/menuScreen.png" alt="" /></a>
 						<div class="content">
 							<h3>EMDR is not hypnosis.</h3>
 							<p>EMDR takes part of the subject back to revisit a traumatic past event in order to "reprocess" the experience and their emotions while keeping another part of the subject in the present through lateral eye movements.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a class="image"><img src="images/pic02.jpg" alt="" /></a>
+						<a class="image"><img src="images/demo.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Proven to help.</h3>
 							<p>EMDR has been backed by more than 20 controlled studies as well as by the American Psychiatric Association, International Society for Traumatic Stress, the U.S.Department of Veterans Affairs,the Department of Defense, the UK Department of Health and the Israeli National Council for Mental Health. </p>
