Final touches and download link

--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
 		<!-- Header -->
 			<div id="header">
 				<img src="website logo.png" alt="vrEMDR logo">
+				<br />
 			<h1>Hi. This is vrEMDR.</h1>
 				<p>An app that bridges the gap between technology and medicine
 				<br />
-				focusing on the application of VR and psychotherapy </p>
+				focusing on the application of VR and psychotherapy.</p>
+
+				<br />
+				<br />
+				<a href="vrEMDR-v0.1.apk" class="image"><img src="images/download.png" alt="" /></a>
 			</div>
 
 		<!-- Main -->
@@ -28,9 +33,9 @@
 				<header class="major container medium">
 					<h2>EMDR defined:
 					<br />
-					(Eye Movement Desesitization and Reprocessing)
+					(Eye Movement Desensitization and Reprocessing)
 					<br /></h2>
-					<p>"an integrative psychotherapy approach that has been extensively researched and proven effective for the treatment of trauma and many other mental health problems"
+					<p>"an integrative psychotherapy approach that has been extensively researched and proven effective for the treatment of trauma and many other mental health problems."
 					</p><br />
 
 					<!--
@@ -51,7 +56,7 @@
 						<a class="image"><img src="images/demo.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Proven to help.</h3>
-							<p>EMDR has been backed by more than 20 controlled studies as well as by the American Psychiatric Association, International Society for Traumatic Stress, the U.S.Department of Veterans Affairs,the Department of Defense, the UK Department of Health and the Israeli National Council for Mental Health. </p>
+							<p>EMDR has been backed by more than 20 controlled studies as well as by the American Psychiatric Association, International Society for Traumatic Stress, the U.S.Department of Veterans Affairs,the Department of Defense, the UK Department of Health and the Israeli National Council for Mental Health.</p>
 						</div>
 					</section>
 					<section class="feature left">
@@ -72,7 +77,7 @@
 						<header>
 							<p>Eye Movement Therapy</p>
 						</header>
-						<p>EMDR is centered around the theory that lateral eye movements can relieve stress — and when these movements are controlled, patients are better equipped to tackle traumatic memories. The multi-phase EMDR process begins with patients identifying difficult memories related to their trauma. Once these memories have been targeted, therapists work to first desensitize patients to them, and then retrain the brain to process these memories in a more positive way — all while controlling lateral eye movements through hand motions, sounds and other stimuli</p>
+						<p>EMDR is centered around the theory that lateral eye movements can relieve stress — and when these movements are controlled, patients are better equipped to tackle traumatic memories. The multi-phase EMDR process begins with patients identifying difficult memories related to their trauma. Once these memories have been targeted, therapists work to first desensitize patients to them, and then retrain the brain to process these memories in a more positive way — all while controlling lateral eye movements through hand motions, sounds and other stimuli.</p>
 					</section>
 
 					<section>
@@ -99,7 +104,7 @@
 
 				<footer class="major container medium">
 					<h3>DISCLAIMER:</h3>
-					<p>While EMDR is backed by medical professionals, eEMDR was created as a prototype tool for a hackathon to supplement the treatments administered by certified EMDR professionals. </p>
+					<p>While EMDR is backed by medical professionals, eEMDR was created as a prototype tool for a hackathon to supplement the treatments administered by certified EMDR professionals.</p>
 					<ul class="actions special">
 						<li><a href="https://emdrcanada.org/emdr-defined/" class="button">Learn more about EMDR</a></li>
 					</ul>
@@ -119,7 +124,7 @@
 
 
 
-						<li><a href="https://github.com/adinkwok/eEMDR" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/adinkwok/vrEMDR" class="icon fa-github"><span class="label">Github</span></a></li>
 
 					</ul>
 
