--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 			<h1>Hi. This is vrEMDR.</h1>
 				<p>An app that bridges the gap between technology and medicine
 				<br />
-				focusing on the application of VR and psychotherapy.</p>
-
+				focusing on the application of VR and psychotherapy.
 				<br />
-				<br />
-				<a href="vrEMDR-v0.1.apk" class="image"><img src="images/download.png" alt="" /></a>
+				You can download the debug apk <a href="vrEMDR-v0.1.apk">here</a>.</p>
 			</div>
 
 		<!-- Main -->
