Use a better download button

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 			<h1>Hi. This is vrEMDR.</h1>
 				<p>An app that bridges the gap between technology and medicine
 				<br />
-				focusing on the application of VR and psychotherapy.
-				<br />
-				You can download the debug apk <a href="vrEMDR-v0.1.apk">here</a>.</p>
+				focusing on the application of VR and psychotherapy.</p>
 			</div>
 
 		<!-- Main -->
 			<div id="main">
+			<ul class="actions special">
+				<li><a href="vrEMDR-v0.1.apk" class="button">Download debug apk</a></li>
+			</ul>
 
 				<header class="major container medium">
 					<h2>EMDR defined:
