--- a/index.html
+++ b/index.html
@@ -104,12 +104,22 @@
 
 				<footer class="major container medium">
 					<h3>DISCLAIMER:</h3>
-					<p>While EMDR is backed by medical professionals, eEMDR was created as a prototype tool for a hackathon to supplement the treatments administered by certified EMDR professionals.</p>
+					<p>While EMDR is backed by medical professionals, vrEMDR was created as a prototype tool for a hackathon to supplement the treatments administered by certified EMDR professionals.</p>
 					<ul class="actions special">
 						<li><a href="https://emdrcanada.org/emdr-defined/" class="button">Learn more about EMDR</a></li>
 					</ul>
 				</footer>
 
+
+
+				<footer class="major container medium">
+					<h3>Contact us:</h3>
+						<p><a href="https://www.linkedin.com/in/adin-kwok/">Adin Kwok</a> <br />
+						<a href="https://www.linkedin.com/in/josh-chan/">Josh Chan</a> <br />
+						<a href="https://www.linkedin.com/in/georgexu-/">George Xu</a> <br />
+						Chanpreet Mann
+						</p>
+				</footer>
 			</div>
 
 		<!-- Footer -->
@@ -118,11 +128,7 @@
 
 					<header class="major last">
 
-
-
 					<ul class="icons">
-
-
 
 						<li><a href="https://github.com/adinkwok/vrEMDR" class="icon fa-github"><span class="label">Github</span></a></li>
 
