Update contact info

--- a/index.html
+++ b/index.html
@@ -1,170 +1,198 @@
 <!DOCTYPE HTML>
 <!--
-	Directive by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Directive by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>vrEMDR</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<head>
+    <title>vrEMDR</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body class="is-preload">
 
-		<!-- Header -->
-			<div id="header">
-				<img src="website logo.png" alt="vrEMDR logo">
-				<br />
-			<h1>Hi. This is vrEMDR.</h1>
-				<p>An app that bridges the gap between technology and medicine
-				<br />
-				focusing on the application of VR and psychotherapy.</p>
-			</div>
+    <!-- Header -->
+    <div id="header">
+        <img src="website logo.png" alt="vrEMDR logo">
+        <br />
+        <h1>Hi. This is vrEMDR.</h1>
+        <p>
+            An app that bridges the gap between technology and medicine
+            <br />
+            focusing on the application of VR and psychotherapy.
+        </p>
+    </div>
 
-		<!-- Main -->
-			<div id="main">
-			<ul class="actions special">
-				<li><a href="vrEMDR-v0.1.apk" class="button">Download debug apk</a></li>
-			</ul>
+    <!-- Main -->
+    <div id="main">
+        <ul class="actions special">
+            <li>
+                <a href="vrEMDR-v0.1.apk" class="button">Download debug apk</a>
+            </li>
+        </ul>
 
-				<header class="major container medium">
-					<h2>EMDR defined:
-					<br />
-					(Eye Movement Desensitization and Reprocessing)
-					<br /></h2>
-					<p>"an integrative psychotherapy approach that has been extensively researched and proven effective for the treatment of trauma and many other mental health problems."
-					</p><br />
+        <header class="major container medium">
+            <h2>
+                EMDR defined:
+                <br />
+                (Eye Movement Desensitization and Reprocessing)
+                <br />
+            </h2>
+            <p>
+                "an integrative psychotherapy approach that has been extensively researched and proven effective for the treatment of trauma and many other mental health problems."
+            </p>
+            <br />
 
-				</header>
+        </header>
 
-				<div class="box container">
-					<header>
-				 <iframe width=75% height=350px src="https://www.youtube.com/embed/uBulIeyuK3M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen id="iFrame1"></iframe>
-			 </header></div>
+        <div class="box container">
+            <header>
+                <iframe width=75% height=350px src="https://www.youtube.com/embed/uBulIeyuK3M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen id="iFrame1"></iframe>
+            </header>
+        </div>
 
-				<div class="box alt container">
-					<section class="feature left">
-						<a class="image"><img src="images/menuScreen.png" alt="" /></a>
-						<div class="content">
-							<h3>EMDR is not hypnosis.</h3>
-							<p>EMDR takes part of the subject back to revisit a traumatic past event in order to "reprocess" the experience and their emotions while keeping another part of the subject in the present through lateral eye movements.</p>
-						</div>
-					</section>
-					<section class="feature right">
-						<a class="image"><img src="images/demo.jpg" alt="" /></a>
-						<div class="content">
-							<h3>Proven to help.</h3>
-							<p>EMDR has been backed by more than 20 controlled studies as well as by the American Psychiatric Association, International Society for Traumatic Stress, the U.S.Department of Veterans Affairs,the Department of Defense, the UK Department of Health and the Israeli National Council for Mental Health.</p>
-						</div>
-					</section>
-					<section class="feature left">
-						<a class="image"><img src="images/insession.png" /></a>
-						<div class="content">
-							<h3>How Does it work?</h3>
-							<p>After a traumatic experience, the moment of the event gets "stuck in time." Revisiting the event can sometimes be just as painful as the event itself. EDMR sessions last 60-90 minutes and seem to have a direct effect on the way the brain processes information, behaving simularily to natural processes such as dreaming and REM eye movement.</p>
-						</div>
-					</section>
-				</div>
-
-
-				<div class="box container">
-					<header>
-						<h2>More Info</h2>
-					</header>
-					<section>
-						<header>
-							<p>Eye Movement Therapy</p>
-						</header>
-						<p>EMDR is centered around the theory that lateral eye movements can relieve stress — and when these movements are controlled, patients are better equipped to tackle traumatic memories. The multi-phase EMDR process begins with patients identifying difficult memories related to their trauma. Once these memories have been targeted, therapists work to first desensitize patients to them, and then retrain the brain to process these memories in a more positive way — all while controlling lateral eye movements through hand motions, sounds and other stimuli.</p>
-					</section>
-
-					<section>
-						<header>
-							<p>Procedure</p>
-						</header>
-						<ol class="default">
-							<li> Setting treatment goals</li>
-							<li>Desensitizing your triggers</li>
-							<li> Install your ideal emotional state</li>
-							<li> Ending of EMDR session</li>
-						</ol>
-					</section>
-					<section>
-						<header>
-							<p>Theory</p>
-						</header>
-						<p>As this happens, for reasons believed by a Harvard researcher to be connected with the biological mechanisms involved in Rapid Eye Movement (REM) sleep, internal associations arise and the clients begin to process the memory and disturbing feelings. In successful EMDR therapy, the meaning of painful events is transformed on an emotional level.  For instance, a victim shifts from feeling horror and repulsion to holding the firm belief that, “I survived it and I am strong.”  Unlike talk therapy, the insights clients gain in EMDR therapy result not so much from clinician interpretation, but from the client’s own accelerated intellectual and emotional processes.  The net effect is that clients conclude EMDR therapy feeling empowered by the very experiences that once debased them.  Their wounds have not just closed, they have transformed. As a natural outcome of the EMDR therapeutic process, the clients’ thoughts, feelings and behavior are all robust indicators of emotional health and resolution—all without speaking in detail or doing homework used in other therapies.
-</p>
-					</section>
-
-				</div>
+        <div class="box alt container">
+            <section class="feature left">
+                <a class="image"><img src="images/menuScreen.png" alt="" /></a>
+                <div class="content">
+                    <h3>EMDR is not hypnosis.</h3>
+                    <p>EMDR takes part of the subject back to revisit a traumatic past event in order to "reprocess" the experience and their emotions while keeping another part of the subject in the present through lateral eye movements.</p>
+                </div>
+            </section>
+            <section class="feature right">
+                <a class="image"><img src="images/demo.jpg" alt="" /></a>
+                <div class="content">
+                    <h3>Proven to help.</h3>
+                    <p>EMDR has been backed by more than 20 controlled studies as well as by the American Psychiatric Association, International Society for Traumatic Stress, the U.S.Department of Veterans Affairs,the Department of Defense, the UK Department of Health and the Israeli National Council for Mental Health.</p>
+                </div>
+            </section>
+            <section class="feature left">
+                <a class="image"><img src="images/insession.png" /></a>
+                <div class="content">
+                    <h3>How Does it work?</h3>
+                    <p>After a traumatic experience, the moment of the event gets "stuck in time." Revisiting the event can sometimes be just as painful as the event itself. EDMR sessions last 60-90 minutes and seem to have a direct effect on the way the brain processes information, behaving simularily to natural processes such as dreaming and REM eye movement.</p>
+                </div>
+            </section>
+        </div>
 
 
-				<footer class="major container medium">
-					<h3>DISCLAIMER:</h3>
-					<p>While EMDR is backed by medical professionals, vrEMDR was created as a prototype tool for a hackathon to supplement the treatments administered by certified EMDR professionals.</p>
-					<ul class="actions special">
-						<li><a href="https://emdrcanada.org/emdr-defined/" class="button">Learn more about EMDR</a></li>
-					</ul>
-				</footer>
+        <div class="box container">
+            <header>
+                <h2>More Info</h2>
+            </header>
+            <section>
+                <header>
+                    <p>Eye Movement Therapy</p>
+                </header>
+                <p>EMDR is centered around the theory that lateral eye movements can relieve stress — and when these movements are controlled, patients are better equipped to tackle traumatic memories. The multi-phase EMDR process begins with patients identifying difficult memories related to their trauma. Once these memories have been targeted, therapists work to first desensitize patients to them, and then retrain the brain to process these memories in a more positive way — all while controlling lateral eye movements through hand motions, sounds and other stimuli.</p>
+            </section>
+
+            <section>
+                <header>
+                    <p>Procedure</p>
+                </header>
+                <ol class="default">
+                    <li> Setting treatment goals</li>
+                    <li>Desensitizing your triggers</li>
+                    <li> Install your ideal emotional state</li>
+                    <li> Ending of EMDR session</li>
+                </ol>
+            </section>
+            <section>
+                <header>
+                    <p>Theory</p>
+                </header>
+                <p>
+                    As this happens, for reasons believed by a Harvard researcher to be connected with the biological mechanisms involved in Rapid Eye Movement (REM) sleep, internal associations arise and the clients begin to process the memory and disturbing feelings. In successful EMDR therapy, the meaning of painful events is transformed on an emotional level.  For instance, a victim shifts from feeling horror and repulsion to holding the firm belief that, “I survived it and I am strong.”  Unlike talk therapy, the insights clients gain in EMDR therapy result not so much from clinician interpretation, but from the client’s own accelerated intellectual and emotional processes.  The net effect is that clients conclude EMDR therapy feeling empowered by the very experiences that once debased them.  Their wounds have not just closed, they have transformed. As a natural outcome of the EMDR therapeutic process, the clients’ thoughts, feelings and behavior are all robust indicators of emotional health and resolution—all without speaking in detail or doing homework used in other therapies.
+                </p>
+            </section>
+
+        </div>
+
+
+        <footer class="major container medium">
+            <h3>DISCLAIMER:</h3>
+            <p>While EMDR is backed by medical professionals, vrEMDR was created as a prototype tool for a hackathon to supplement the treatments administered by certified EMDR professionals.</p>
+            <ul class="actions special">
+                <li>
+                    <a href="https://emdrcanada.org/emdr-defined/" class="button">Learn more about EMDR</a>
+                </li>
+            </ul>
+        </footer>
 
 
 
-				<footer class="major container medium">
-					<h3>Contact us:</h3>
-						<p><a href="https://www.linkedin.com/in/adin-kwok/">Adin Kwok</a> <br />
-						<a href="https://www.linkedin.com/in/josh-chan/">Josh Chan</a> <br />
-						<a href="https://www.linkedin.com/in/georgexu-/">George Xu</a> <br />
-						Chanpreet Mann
-						</p>
-				</footer>
-			</div>
+        <footer class="major container medium">
+            <h3>Contact us:</h3>
+            <p>
+                The continuation of vrEMDR is taking place
+                <a href="https://adinkwok.com/vremdr">
+                    here
+                </a> by
+                <a href="https://www.linkedin.com/in/adin-kwok/">Adin Kwok</a>
+                <br />
+                <br />
+                <a href="https://www.linkedin.com/in/josh-chan/">Josh Chan</a>
+                <br />
+                <a href="https://www.linkedin.com/in/georgexu-/">George Xu</a>
+                <br />
+                Chanpreet Mann
 
-		<!-- Footer -->
-			<div id="footer">
-				<div class="container medium">
+            </p>
+        </footer>
+    </div>
 
-					<header class="major last">
+    <!-- Footer -->
+    <div id="footer">
+        <div class="container medium">
 
-					<ul class="icons">
+            <header class="major last">
 
-						<li><a href="https://github.com/adinkwok/vrEMDR" class="icon fa-github"><span class="label">Github</span></a></li>
+                <ul class="icons">
 
-					</ul>
+                    <li>
+                        <a href="https://github.com/adinkwok/vrEMDR" class="icon fa-github"><span class="label">Github</span></a>
+                    </li>
 
-					<ul class="copyright">
-						<li>&copy; eEMDR. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+                </ul>
 
-				</div>
-			</div>
+                <ul class="copyright">
+                    <li>&copy; eEMDR. All rights reserved.</li>
+                    <li>
+                        Design:
+                        <a href="http://html5up.net">HTML5 UP</a>
+                    </li>
+                </ul>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script type="application/javascript">
+        </div>
+    </div>
 
-			function resizeIFrameToFitContent( iFrame ) {
-			    iFrame.width  = 75%;
-			}
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script type="application/javascript">
 
-			window.addEventListener('DOMContentLoaded', function(e) {
+        function resizeIFrameToFitContent( iFrame ) {
+            iFrame.width  = 75%;
+        }
 
-			    var iFrame = document.getElementById( 'iFrame1' );
-			    resizeIFrameToFitContent( iFrame );
+        window.addEventListener('DOMContentLoaded', function(e) {
 
-			    // or, to resize all iframes:
-			    var iframes = document.querySelectorAll("iframe");
-			    for( var i = 0; i < iframes.length; i++) {
-			        resizeIFrameToFitContent( iframes[i] );
-			    }
-			} );
+            var iFrame = document.getElementById( 'iFrame1' );
+            resizeIFrameToFitContent( iFrame );
 
-			</script>
-	</body>
+            // or, to resize all iframes:
+            var iframes = document.querySelectorAll("iframe");
+            for( var i = 0; i < iframes.length; i++) {
+                resizeIFrameToFitContent( iframes[i] );
+            }
+        } );
+
+    </script>
+</body>
 </html>
